legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__aligns_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 210.00mm x 297.00mm



left 0

---


left 10

---


center 0

---


center -10

---


right 0

---


right 10

---


inside 0

---


inside 0

---


outside 0

---


outside 10

---


top 0

---


top 10

---


middle 0

---


middle -10

---


bottom 0

---


bottom 10
