legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__charshape_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 210.00mm x 297.00mm



가

*기울임***진하게**

밑줄없음밑줄~~가운데줄~~윗줄

글자크기: 기준크기10pt 한글90% 영문80% 기타70%

폰트: 한글돋움 영문CourierNew 기타قLucidaSansUnicode

붉은밑줄

점선밑줄
