legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__chart_hwpx_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**버전**: 10, 0, 0, 5060 WIN32LEWindows_8



**차트를 조건에 따라 완성하여 제출해 주세요.**

**유형 1.**

<<차트조건>>

1) 차트 데이터는 표 내용에서 연령대별 2015년, 2014년, 2013년의 값만 이용할 것

2) 종류 - <묶은 세로 막대형>으로 작업할 것

3) 제목 – 굴림, 진하게, 12pt, 배경 – 선 모양(한줄로), 그림자(2pt)

4) 제목 이외의 전체 글꼴 – 굴림, 보통, 10pt

5) 축제목과 범례는 <<출력형태>>와 동일하게 처리할 것


| 구분<br> | 10대<br> | 20대<br> | 30대<br> | 40대 이상<br> | 합계<br> |
|---|---|---|---|---|---|
| 2015년<br> | 11.2<br> | 24.7<br> | 16.3<br> | 15.3<br> | 67.5<br> |
| 2014년<br> | 11.0<br> | 25.5<br> | 18.7<br> | 18.7<br> | 73.9<br> |
| 2013년<br> | 16.4<br> | 41.6<br> | 25.9<br> | 9.5<br> | 93.4<br> |
| 2012년<br> | 19.9<br> | 40.9<br> | 24.5<br> | 12.9<br> |   |


**유형 2.**

<<차트조건>>

1) 차트 데이터는 표 내용에서 연도별 초등학교, 중학교, 고등학교의 값만 이용할 것

2) 종류 - <묶은 세로 막대형>으로 작업할 것

3) 제목 – 궁서, 진하게, 12pt, 배경 – 선 모양(한줄로), 그림자(2pt)

4) 제목 이외의 전체 글꼴 – 궁서, 보통, 10pt

5) 축제목과 범례는 <<출력형태>>와 동일하게 처리할 것


| 구분<br> | 2012년<br> | 2013년<br> | 2014년<br> | 2015년<br> | 합계<br> |
|---|---|---|---|---|---|
| 초등학교<br> | 167,900<br> | 184,100<br> | 174,900<br> | 132,200<br> | 659,100<br> |
| 중학교<br> | 167,800<br> | 161,700<br> | 198,300<br> | 203,200<br> | 731,000<br> |
| 고등학교<br> | 138,700<br> | 145,400<br> | 140,600<br> | 98,800<br> | 523,500<br> |
| 기타<br> | 102,600<br> | 103,700<br> | 101,800<br> | 89,900<br> |   |


**유형 3.**

<<차트조건>>

1) 차트 데이터는 표 내용에서 구분별 일자마라톤, 8자마라톤, 스피드, 2단 뛰기의 값만 이용할 것

2) 종류 - <묶은 가로 막대형>으로 작업할 것

3) 제목 – 굴림, 진하게, 12pt, 배경 – 선 모양(한줄로), 그림자(2pt)

4) 제목 이외의 전체 글꼴 – 굴림, 보통, 10pt

5) 축제목과 범례는 <<출력형태>>와 동일하게 처리할 것


| 구분<br> | 일자마라톤<br> | 8자마라톤<br> | 스피드<br> | 2단 뛰기<br> | 많이 넘기<br> |
|---|---|---|---|---|---|
| 초등부<br> | 58<br> | 35<br> | 37<br> | 127<br> | 67<br> |
| 중등부<br> | 89<br> | 45<br> | 52<br> | 145<br> | 84<br> |
| 고등부<br> | 98<br> | 56<br> | 63<br> | 192<br> | 95<br> |
| 합계<br> | 245<br> | 136<br> | 152<br> | 464<br> |   |


**유형 4.**

<<차트조건>>

1) 차트 데이터는 표 내용에서 지역별 기술, 포스터, 논문의 값만 이용할 것

2) 종류 - <꺽은선형>으로 작업할 것

3) 제목 – 궁서, 진하게, 12pt, 배경 – 선 모양(한줄로), 그림자(2pt)

4) 제목 이외의 전체 글꼴 – 궁서, 보통, 10pt

5) 축제목과 범례는 <<출력형태>>와 동일하게 처리할 것


| 구분<br> | 아시아<br> | 유럽<br> | 미주<br> | 아프리카<br> | 평균<br> |
|---|---|---|---|---|---|
| 기술<br> | 418<br> | 306<br> | 237<br> | 103<br> | 266.00<br> |
| 포스터<br> | 341<br> | 385<br> | 231<br> | 194<br> | 287.75<br> |
| 논문<br> | 224<br> | 273<br> | 251<br> | 148<br> | 224.00<br> |
| 기타<br> | 146<br> | 204<br> | 183<br> | 126<br> |   |
