legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__example_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<p><span style="font-size: 13.0pt; font-family: '궁서체'">삼강오륜</span></p>
<p><span style="font-size: 13.0pt; font-family: '궁서체'">삼강오륜 은 현재까지도 이어져 일상생활에 깊이 뿌리내린 윤리 도덕이랍니다.</span></p>
<p><span style="font-size: 13.0pt; font-family: '궁서체'">삼강</span></p>
<p><span style="font-size: 13.0pt; font-family: '궁서체'">군위신강: 임금과 신하 사이에 마땅히 지켜야 할 도리</span></p>
<p><span style="font-size: 13.0pt; font-family: '궁서체'">부위자강 : 어버이와 자식 사이에 마땅히 지켜야 할 도리</span></p>
<p><span style="font-size: 13.0pt; font-family: '궁서체'">부위부강 : 남편과 아내 사이에 지켜야 할 도리</span></p>
<p><span style="font-size: 13.0pt; font-family: '궁서체'">오륜</span></p>
<p><span style="font-size: 13.0pt; font-family: '궁서체'">군신유의: 임금과 신하 사이에는 의로움이 있어야 함.</span></p>
<p><span style="font-size: 13.0pt; font-family: '궁서체'">부자유친: 어버이와 자식 사이에는 친함이 있어야 함.</span></p>
<p><span style="font-size: 13.0pt; font-family: '궁서체'">부부유별: 부부 사이에는 구별이 있어야 함.</span></p>
<p><span style="font-size: 13.0pt; font-family: '궁서체'">장유유서: 어른과 아이 사이에는 차례와 질서가 있어야 함.</span></p>
<p><span style="font-size: 13.0pt; font-family: '궁서체'">붕우유신: 친구 사이에는 믿음이 있어야 함</span></p>
</div>
